fixed problem with horizontal scroll

--- a/src/components/CartMenu/CartMenu.css
+++ b/src/components/CartMenu/CartMenu.css
@@ -3,7 +3,7 @@
     top: 30px;
     left: -300px;
     background-color: rgb(36, 37, 41);
-    width: 400px;
+    width: 355px;
     padding: 10px 20px;
     z-index: 2;
     border-radius: 15px;
